<resources>
    <string name="app_name">ArachnomeshAssignment</string>
    <string name="click_on_get_location_button">Click on Get location button</string>
    <string name="get_your_location">Get Your Location</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="name">Name</string>
    <string name="enter_your_contact_number_here">Enter your contact number here</string>
    <string name="permission_denied_please_give_the_required_permissions_from_settings">Permission Denied please give the required permissions from settings</string>
    <string name="post_data">Post data</string>
    <string name="enter_your_user_id">Enter your user ID</string>
    <string name="user_id">User Id</string>
    <string name="your_data">Your Data</string>
    <string name="post_request_information">Post request information</string>
    <string name="longitude">longitude</string>
    <string name="latitude">Latitude</string>
    <string name="usercontact">usercontact</string>
    <string name="usename">usename</string>
    <string name="userid">Userid</string>
    <string name="statuscode">Statuscode</string>
    <string name="error_if_any">Error (if any)</string>
    <string name="status">Status</string>
</resources>