<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">


        <TextView
            android:id="@+id/nametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="20sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="40dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/popins"
            android:textColor="@color/main"
            android:text="@string/name" />

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/nametext"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/round_theme_for_edittext"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/enter_your_name_here"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill,TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/contacttext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_below="@id/nameField"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/popins"
            android:textColor="@color/main"
            android:text="@string/contact" />

        <EditText
            android:id="@+id/contactField"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/contacttext"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/round_theme_for_edittext"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/enter_your_contact_number_here"
            android:inputType="number"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            tools:ignore="Autofill,TouchTargetSizeCheck" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/linearLayout"
            android:layout_below="@id/contactField"
            android:layout_marginTop="30dp"
            android:paddingStart="40dp"
            android:orientation="horizontal"
            tools:ignore="RtlSymmetry">
            <TextView
                android:id="@+id/locationtext"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="20sp"
                android:paddingTop="10dp"
                android:fontFamily="@font/popins"
                android:textColor="@color/main"
                android:text="@string/location" />

            <Button
                android:id="@+id/getlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/popins"
                android:text="@string/get_your_location"
                tools:ignore="TouchTargetSizeCheck" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:paddingTop="5dp"
                android:visibility="gone"
                android:layout_gravity="center_vertical"
                />


        </LinearLayout>

        <TextView
            android:id="@+id/locationField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout"
            android:ems="10"
            android:hint="@string/click_on_get_location_button"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textColor="@color/main"
            android:background="@drawable/round_theme_for_locationtext"
            android:layout_marginStart="30dp" />


        <TextView
            android:id="@+id/permissionDenied"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:layout_below="@id/locationField"
            android:layout_marginEnd="40dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/popins"
            android:textColor="@android:color/holo_red_light"
            android:textAlignment="center"
            android:visibility="gone"
            android:text="@string/permission_denied_please_give_the_required_permissions_from_settings" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>